<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.olivia</groupId>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <executable>${javac.path}</executable>
          <source>${java.version}</source> <!-- 开启预览特性 -->
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <fork>true</fork>
          <!--          <executable>/Users/wangbao/Library/Java/openjdk-25.0.1/Contents/Home/bin/javac</executable>-->
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>${mapstruct.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <!-- 可选：运行时也开启预览特性（避免运行报错） -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.6</version>
        <configuration>
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <!-- 4. 配置执行插件（命令行运行 main 时用） -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <executable>java</executable>
          <arguments>
            <argument>--enable-preview</argument>
            <argument>-cp</argument>
            <argument>${project.build.outputDirectory}</argument>
            <!-- 替换为你的主类路径 -->
            <!--            <argument>com.example.StringTemplateDemo</argument>-->
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <artifactId>peanut-portal-all</artifactId>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.olivia</groupId>
        <artifactId>peanut-sdk</artifactId>
        <version>${peanut.version}</version>
      </dependency>
      <dependency>
        <groupId>com.olivia</groupId>
        <artifactId>peanut-base</artifactId>
        <version>${peanut.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>1.15.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>

      <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>${mysql.driver.version}</version>
      </dependency>
      <dependency>
        <groupId>com.belerweb</groupId>
        <artifactId>pinyin4j</artifactId>
        <version>2.5.1</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>

      <dependency>
        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        <groupId>com.baomidou</groupId>
        <version>${baomidou.version}</version>
      </dependency>

      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-annotation</artifactId>
        <version>${baomidou.version}</version>
      </dependency>
      <dependency>
        <groupId>org.locationtech.jts</groupId>
        <artifactId>jts-core</artifactId>
        <version>${locationtech.jts.version}</version>
      </dependency>

      <dependency>
        <artifactId>javassist</artifactId>
        <groupId>org.javassist</groupId>
        <version>${javassist.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.protobuf</groupId>
        <artifactId>protobuf-java</artifactId>
        <version>${protobuf.version}</version>
      </dependency>
      <dependency>
        <artifactId>h3</artifactId>
        <groupId>com.uber</groupId>
        <version>${uber.h3.version}</version>
      </dependency>
      <dependency>
        <artifactId>easyexcel</artifactId>
        <exclusions>
          <exclusion>
            <artifactId>poi</artifactId>
            <groupId>org.apache.poi</groupId>
          </exclusion>
          <exclusion>
            <artifactId>xmlbeans</artifactId>
            <groupId>org.apache.xmlbeans</groupId>
          </exclusion>
          <exclusion>
            <artifactId>poi-ooxml-schemas</artifactId>
            <groupId>org.apache.poi</groupId>
          </exclusion>
        </exclusions>
        <groupId>com.alibaba</groupId>
        <version>${easy.excel.version}</version>
      </dependency>
      <dependency>
        <artifactId>mybatis-plus-join-boot-starter</artifactId>
        <groupId>com.github.yulichang</groupId>
        <version>1.5.7</version>
      </dependency>

      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-jsqlparser</artifactId>
        <version>${baomidou.version}</version>
      </dependency>

      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-extension</artifactId>
        <version>${baomidou.version}</version>
      </dependency>

      <!--      <dependency>-->
      <!--        <artifactId>mybatis-spring-boot-starter</artifactId>-->
      <!--        <groupId>org.mybatis.spring.boot</groupId>-->
      <!--        <version>3.0.3</version>-->
      <!--      </dependency>-->


      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>cn.hutool</groupId>
        <artifactId>hutool-all</artifactId>
        <version>${hutool.version}</version>
      </dependency>
      <dependency>
        <artifactId>lombok</artifactId>
        <groupId>org.projectlombok</groupId>
        <version>${lombok.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <artifactId>poi</artifactId>
        <groupId>org.apache.poi</groupId>
        <version>${apache.poi.versison}</version>
      </dependency>

      <!-- 替换为最新稳定 4.1.x Netty 版本 -->
      <!--      <dependency>-->
      <!--        <groupId>io.netty</groupId>-->
      <!--        <artifactId>netty-all</artifactId>-->
      <!--        <version>${netty.version}</version>-->
      <!--      </dependency>-->
      <dependency>
        <artifactId>netty-common</artifactId>
        <groupId>io.netty</groupId>
        <version>${netty.version}</version>

      </dependency>
      <dependency>
        <artifactId>ortools-java</artifactId>
        <exclusions>
          <exclusion>
            <artifactId>ortools-darwin-aarch64</artifactId>
            <groupId>com.google.ortools</groupId>
          </exclusion>
          <exclusion>
            <artifactId>ortools-darwin-x86-64</artifactId>
            <groupId>com.google.ortools</groupId>
          </exclusion>
          <exclusion>
            <artifactId>ortools-win32-x86-64</artifactId>
            <groupId>com.google.ortools</groupId>
          </exclusion>
          <exclusion>
            <groupId>com.google.ortools</groupId>
            <artifactId>ortools-linux-aarch64</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.google.ortools</groupId>
            <artifactId>ortools-linux-x86-64</artifactId>
          </exclusion>
        </exclusions>
        <groupId>com.google.ortools</groupId>
        <version>${ortools.version}</version>
      </dependency>
      <dependency>
        <groupId>com.googlecode.aviator</groupId>
        <artifactId>aviator</artifactId>
        <version>${aviator.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <packaging>pom</packaging>
  <modules>
    <module>peanut-sdk</module>
    <module>peanut-gateway</module>
    <module>peanut-base</module>
  </modules>

  <properties>
    <!--    <java.version>26</java.version>-->
    <!--    <javac.path>/Users/wangbao/Library/Java/JavaVirtualMachines/openjdk-26.0.1/Contents/Home/bin/javac</javac.path>-->

    <java.version>25</java.version>
    <javac.path>/Users/wangbao/Library/Java/openjdk-25.0.1/Contents/Home/bin/javac</javac.path>

    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <apache.poi.versison>5.5.1</apache.poi.versison>
    <aviator.version>5.4.3</aviator.version>
    <baomidou.version>3.5.16</baomidou.version>
    <easy.excel.version>4.0.3</easy.excel.version>
    <gson.version>2.14.0</gson.version>
    <guava.version>33.6.0-jre</guava.version>
    <hutool.version>5.8.46</hutool.version>
    <javassist.version>3.31.0-GA</javassist.version>
    <locationtech.jts.version>1.20.0</locationtech.jts.version>
    <lombok.version>1.18.46</lombok.version>
    <mapstruct.version>1.6.3</mapstruct.version>
    <mysql.driver.version>9.7.0</mysql.driver.version>
    <ortools.version>9.15.6755</ortools.version>
    <protobuf.version>4.35.1</protobuf.version>
    <uber.h3.version>4.4.0</uber.h3.version>
    <netty.version>4.2.15.Final</netty.version>
    <peanut.version>4.0.0-202607-SNAPSHOT</peanut.version>


  </properties>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <version>3.5.15</version>
  </parent>
  <version>4.0.0-202607-SNAPSHOT</version>

</project>